--- a/cards.html
+++ b/cards.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Коллекционные карточки - MangaSite</title>
+    <title>Коллекционные карточки - CardsSite</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/cards.css">
     <link rel="stylesheet" href="css/manga.css">
@@ -12,7 +12,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="index.html">MangaSite</a>
+                <a href="index.html">CardsSite</a>
             </div>
             <div class="nav-menu">
                 <a href="index.html">Главная</a>
